--- a/src/app/scene/scene.component.html
+++ b/src/app/scene/scene.component.html
@@ -1,6 +1,8 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>Create New Scene</mat-card-title>
+    <div mat-card-avatar class="koia-logo"></div>
+    <mat-card-title>New Scene</mat-card-title>
+    <mat-card-subtitle>Create a new scene of data from a file</mat-card-subtitle>
   </mat-card-header>
 
   <div *ngIf="scene">
