--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,12 @@ body {
   -webkit-font-smoothing: antialiased;  
 }
 
+.koia-logo {
+  background-image: url('./assets/koialogo_50x50.png');
+  background-repeat: no-repeat;
+  background-size: 36px 36px;
+}
+
 .sticky_header {  
   position: -webkit-sticky; /* Safari */
   position: fixed;  
