--- a/src/app/scenes/scenes.component.css
+++ b/src/app/scenes/scenes.component.css
@@ -8,11 +8,18 @@
   display: flex;
 }
 
-#filter_field {
+#span_filter {
   position: absolute;
   top: 10px;
   right: 15px;
+}
+
+#filter_field {  
   width: 300px;
+}
+
+#but_delete_filtered {
+  margin-left: 10px;
 }
 
 .scene_name {
