--- a/src/app/scenes/scenes.component.html
+++ b/src/app/scenes/scenes.component.html
@@ -47,10 +47,10 @@
 <mat-card id="mat_card_all_scenes">
 
   <mat-card-header>
-    <div mat-card-avatar class="koia-logo"></div>
+    <div mat-card-avatar class="scenes-image"></div>
     <mat-card-title>All Scenes
     </mat-card-title>
-    <mat-card-subtitle>Manage your existing scenes
+    <mat-card-subtitle>Manage your existing scenes and activate the chosen one
       <span id="span_filter">
         <mat-form-field id="filter_field">
           <input matInput type="text" placeholder="Text Filter" [value]="filter" (change)="onFilterChange($event.target.value)">
