--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -52,13 +52,23 @@
             <mat-icon>print</mat-icon>
          </button>
          -->
-         <button mat-button mat-icon-button matTooltip="Save current view" [disabled]="!elementContexts || elementContexts.length === 0"
-            (click)="saveView()">
+         <button mat-button mat-icon-button matTooltip="Save current view"
+            [disabled]="!elementContexts || elementContexts.length === 0" (click)="saveView()">
             <mat-icon>save_alt</mat-icon>
          </button>
-         <button mat-button mat-icon-button matTooltip="Open saved view" (click)="loadView()">
-            <mat-icon>open_in_browser</mat-icon>
+
+         <button class="but_more" mat-icon-button matTooltip="Restore saved view" [disabled]="findViews().length === 0"
+            [matMenuTriggerFor]="restoreViewMenu">
+            <mat-icon [matBadge]="findViews().length" [matBadgeHidden]="findViews().length === 0" matBadgeSize="small"
+               matBadgeColor="accent">open_in_browser</mat-icon>
          </button>
+         <mat-menu #restoreViewMenu="matMenu">
+            <button class="menu_item_details" *ngFor="let view of findViews()" mat-menu-item (click)="loadView(view)">
+               <mat-icon>open_in_browser</mat-icon>
+               <span>{{ view.name }} <var>{{ view.modifiedTime | date:'short' }}</var></span>
+            </button>
+         </mat-menu>
+
          &nbsp;&nbsp;&nbsp;
          <button mat-button mat-icon-button matTooltip="New Chart" (click)="addChart()">
             <mat-icon svgIcon="new_chart"></mat-icon>
@@ -106,7 +116,8 @@
                      <textarea matInput class="textarea_title" type="text" [value]="context.getTitle()"
                         koiaTextareaMaxRows="2" (keyup)="context.title = $event.target.value"></textarea>
                   </div>
-                  <button class="but_warning" mat-icon-button *ngIf="context.warning" [matTooltip]="context.warning" color="warn">
+                  <button class="but_warning" mat-icon-button *ngIf="context.warning" [matTooltip]="context.warning"
+                     color="warn">
                      <mat-icon>error</mat-icon>
                   </button>
                   <button class="but_close" mat-icon-button matTooltip="Delete" (click)="removeElement(context)">
