--- a/src/app/main-toolbar/main-toolbar.component.html
+++ b/src/app/main-toolbar/main-toolbar.component.html
@@ -11,26 +11,26 @@
       <button id="butScene" mat-button mat-icon-button matTooltip="Add Scene" [routerLink]="[urlScene]">
         <mat-icon>add_photo_alternate</mat-icon>
       </button>
-      <button id="butRawData" mat-stroked-button [color]="currURL == urlRawdata ? 'accent' : ''"
+      <button id="butRawData" mat-stroked-button [color]="currURL === urlRawdata ? 'accent' : ''"
         matTooltip="Raw Data Table" [routerLink]="[urlRawdata]">
         <mat-icon svgIcon="raw_data_view"></mat-icon>
         <span>&nbsp;Raw Data</span>
       </button>
-      <button id="butGridView" mat-stroked-button [color]="currURL == urlGrid ? 'accent' : ''" matTooltip="Grid View"
-        [routerLink]="[urlGrid]">
-        <mat-icon svgIcon="grid_view"></mat-icon>
-        <span>&nbsp;Grid View</span>
-      </button>
-      <button id="butFlexView" mat-stroked-button [color]="currURL == urlFlex ? 'accent' : ''" matTooltip="Flex View"
-        [routerLink]="[urlFlex]">
-        <mat-icon svgIcon="flex_view"></mat-icon>
-        <span>&nbsp;Flex View</span>
-      </button>
-      <button id="butPivotView" mat-stroked-button [color]="currURL == urlPivot ? 'accent' : ''"
+      <button id="butPivotView" mat-stroked-button [color]="currURL === urlPivot ? 'accent' : ''"
         matTooltip="Pivot Table" [routerLink]="[urlPivot]">
         <mat-icon svgIcon="pivot_table"></mat-icon>
         <span>&nbsp;Pivot Table</span>
       </button>
+      <button id="butGridView" mat-stroked-button [color]="currURL === urlGrid ? 'accent' : ''" matTooltip="Grid View"
+        [routerLink]="[urlGrid]">
+        <mat-icon svgIcon="grid_view"></mat-icon>
+        <span>&nbsp;Grid View</span>
+      </button>
+      <button id="butFlexView" mat-stroked-button [color]="currURL === urlFlex ? 'accent' : ''" matTooltip="Flex View"
+        [routerLink]="[urlFlex]">
+        <mat-icon svgIcon="flex_view"></mat-icon>
+        <span>&nbsp;Flex View</span>
+      </button>      
     </span>
 
     <div id="div_filter">
