--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -1,4 +1,4 @@
-<mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+<mat-progress-bar *ngIf="loading" mode="indeterminate" color="accent"></mat-progress-bar>
 <div id="div_margins" *ngIf="marginDivStyle && context.isShowResizableMargin()" mwlResizable [enableGhostResize]="true"
    [ngStyle]="marginDivStyle" [validateResize]="validateMarginResize"
    [resizeEdges]="{ top: true, right: true, bottom: true, left: true }" (resizeEnd)="onMarginResizeEnd($event)">
