--- a/src/app/chartjs/chartjs.component.html
+++ b/src/app/chartjs/chartjs.component.html
@@ -1,4 +1,4 @@
-<mat-progress-bar *ngIf="computing" mode="indeterminate"></mat-progress-bar>
+<mat-progress-bar *ngIf="computing" mode="indeterminate" color="accent"></mat-progress-bar>
 <div style="display: block;">
   <canvas baseChart *ngIf="chartData"
     [datasets]="chartData"
