--- a/src/app/front/front.component.html
+++ b/src/app/front/front.component.html
@@ -1,8 +1,17 @@
 <mat-card>
   <mat-card-content>
 
-    <div id="div_logo">
-      <img id="img_logo" src="../../assets/koialogo_textblack.png">
+    <div id="header">
+
+      <div id="div_logo">
+        <img id="img_logo" src="../../assets/koialogo_textblack.png">
+      </div>
+
+      <div id="div_retrologo">
+        <p>
+          Compatible with <a href="https://retrospective.centeractive.com/" target="_blank"><img id="img_retro" src="../../assets/retrospective_log_analyzer_logo.png"></a>
+        </p>
+      </div>
     </div>
 
     <div id="div_action_cards">
@@ -81,7 +90,7 @@
         </mat-card-content>
         <mat-card-actions>
           <div class="div_actions">
-            <button mat-stroked-button color="primary" [disabled]="!ready" [routerLink]="[urlScene]">
+            <button mat-stroked-button color="primary" [disabled]="!ready" [routerLink]="[urlScenes]">
               <mat-icon>play_circle_filled</mat-icon>
               <span>&nbsp;Start</span>
             </button>
