retrospective log analyzer logo front page

--- a/src/app/scene/scene.component.html
+++ b/src/app/scene/scene.component.html
@@ -6,7 +6,7 @@
 </button>
 <mat-card>
   <mat-card-header>
-    <div mat-card-avatar class="scene-image"></div>
+    <div mat-card-avatar id="newscene-image"></div>
     <mat-card-title>New Scene</mat-card-title>
     <mat-card-subtitle>Create a new scene of data from a file</mat-card-subtitle>
   </mat-card-header>
